# vali-userspace

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  application.mk  build_and_pack.py  depends.sh  install_utils.py  makefile
.github/workflows/: nightly-amd64.yml  nightly-i386.yml
alumni/: main.cpp  makefile  terminal.cpp  terminal.hpp  terminal_freetype.hpp  terminal_line.cpp  terminal_line.hpp  terminal_vt100.cpp
alumni/surfaces/: surface_vali.hpp
alumni/targets/: alumni_vali.cpp  resolver_base.cpp  resolver_base.hpp  resolver_vali.cpp  resolver_vali.hpp
asgaard/: CMakeLists.txt  application.cpp  key_event.cpp  makefile  memory_buffer.cpp  memory_pool.cpp  object.cpp  object_manager.cpp  pointer.cpp  screen.cpp  subsurface.cpp  surface.cpp  window_base.cpp  window_buffer.cpp  window_decoration.cpp  window_edge.cpp  window_manager.cpp  window_memory.cpp
asgaard/drawing/: font.cpp  font_manager.cpp  image.cpp  painter.cpp
asgaard/include/: application.hpp  key_event.hpp  memory_buffer.hpp  memory_pool.hpp  object.hpp  object_manager.hpp  pixel_format.hpp  pointer.hpp  rectangle.hpp  screen.hpp  subsurface.hpp  surface.hpp  window_base.hpp  window_buffer.hpp  window_content.hpp  window_decoration.hpp  window_edge.hpp  window_manager.hpp  window_memory.hpp
asgaard/include/drawing/: color.hpp  font.hpp  font_manager.hpp  image.hpp  painter.hpp
asgaard/include/theming/: theme.hpp  theme_manager.hpp
asgaard/include/utils/: publisher.hpp  subscriber.hpp
asgaard/include/widgets/: icon.hpp  label.hpp
asgaard/theming/: theme.cpp
asgaard/widgets/: icon.cpp  label.cpp
cmake/: Vali.cmake
config/: Vali.cmake  amd64.mk  i386.mk
doom-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
freetype/: makefile
heimdall/: CMakeLists.txt  filter.cpp  heimdall.hpp
heimdall/widgets/: background.hpp  cursor.hpp
libpng/: makefile
libwm/: libwm_connection.c  libwm_connection.h  libwm_server.c  libwm_server.h  libwm_types.h
macia/: CMakeLists.txt  macia.cpp  makefile
protocols/: hd_protocol.xml  wm_protocol.xml
runtime/: CMakeLists.txt
sdlshooter/: CMakeLists.txt  README.txt  common.mk  makefile
sdlshooter/src/: bullets.c  bullets.h  camera.c  camera.h  common.h  defs.h  draw.c  effects.c  effects.h  enemies.c  enemies.h  entities.c  entities.h  highscores.c  highscores.h  init.c  init.h  input.c  items.c  items.h  main.c  main.h  player.c  player.h  sound.c  sound.h  stage.c  stage.h  structs.h  title.c  title.h  util.c
vioarr/: input_handler.cpp  main.cpp  makefile  vioarr.c  vioarr.cpp  vioarr_memory.c  vioarr_pointer.c  vioarr_screen.c  vioarr_surface.c
vioarr/engine/: entity.hpp  vioarr_buffer.c  vioarr_engine.c  vioarr_input.c  vioarr_input.h  vioarr_manager.c  vioarr_manager.h  vioarr_memory.h  vioarr_objects.c  vioarr_region.h  vioarr_renderer.c  vioarr_renderer.h  vioarr_screen.h  vioarr_surface.c  vioarr_surface.h  vioarr_utils.h
vioarr/engine/backend/: nanovg.c  nanovg.h  nanovg_gl.h
vioarr/engine/backend/nanovg/: nanovg_gl.h
vioarr/engine/elements/: accessbar.cpp  window.cpp  window.hpp
vioarr/engine/screen/: vioarr_screen_direct.c  vioarr_screen_headless.c  vioarr_screen_osmesa.c
vioarr/graphics/opengl/: opengl_exts.hpp
vioarr/graphics/opengl/osmesa/: display.hpp  display_amd64.s  display_headless.hpp  display_i386.s  display_osmesa.hpp
vioarr/graphics/soft/: display_framebuffer.hpp  display_framebuffer_amd64.s
vioarr/utils/: log_manager.hpp
vioarr2/: makefile  vioarr.c  vioarr_core.c  vioarr_hid.c  vioarr_memory.c  vioarr_screen.c  vioarr_surface.c
vioarr2/engine/: vioarr_buffer.c  vioarr_buffer.h  vioarr_engine.c  vioarr_engine.h  vioarr_input.c  vioarr_input.h  vioarr_manager.c  vioarr_manager.h  vioarr_memory.h  vioarr_objects.c  vioarr_objects.h  vioarr_region.c  vioarr_region.h  vioarr_renderer.c  vioarr_renderer.h  vioarr_resources.c  vioarr_resources.h  vioarr_screen.h  vioarr_surface.c  vioarr_surface.h  vioarr_utils.c  vioarr_utils.h
vioarr2/engine/memory/: vioarr_ram.c
vioarr2/engine/screen/: vioarr_screen_amd64.s  vioarr_screen_headless.c  vioarr_screen_osmesa.c
wintest/: main.cpp  makefile  wintest.hpp
zlib/: makefile
